--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,8 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Build outputs
-dist/
+# Build outputs (but allow dist folders for our bundles)
+# dist/
 build/
 
 # Environment variables
