--- a/three-core-bundle/package.json
+++ b/three-core-bundle/package.json
@@ -6,9 +6,10 @@
     "build": "rollup -c"
   },
   "dependencies": {
+    "@babel/core": "^7.28.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "^0.174.0"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.27.1",
@@ -18,4 +19,4 @@
     "rollup": "^2.79.2",
     "rollup-plugin-terser": "^7.0.2"
   }
-} 
+}
