--- a/react-three-fiber-bundle/package.json
+++ b/react-three-fiber-bundle/package.json
@@ -6,10 +6,11 @@
     "build": "rollup -c"
   },
   "dependencies": {
+    "@babel/core": "^7.28.0",
+    "@react-three/fiber": "^9.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@react-three/fiber": "^8.15.16",
-    "three": "^0.174.0"
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.27.1",
@@ -19,4 +20,4 @@
     "rollup": "^2.79.2",
     "rollup-plugin-terser": "^7.0.2"
   }
-} 
+}
